--- a/pants.toml
+++ b/pants.toml
@@ -4,7 +4,19 @@ pants_version = "2.17.0rc3"
 print_stacktrace = true
 level = "warn"
 build_file_prelude_globs = ["_pants/*.py"]
-backend_packages = ["pants.backend.awslambda.python", "pants.backend.build_files.fmt.black", "pants.backend.codegen.protobuf.python", "pants.backend.docker", "pants.backend.experimental.helm", "pants.backend.experimental.python", "pants.backend.experimental.python.lint.ruff", "pants.backend.python", "pants.backend.python.lint.black", "pants.backend.python.mixed_interpreter_constraints", "pants.backend.python.typecheck.mypy"]
+backend_packages = [
+  "pants.backend.awslambda.python",
+  "pants.backend.build_files.fmt.black",
+  "pants.backend.codegen.protobuf.python",
+  "pants.backend.docker",
+  "pants.backend.experimental.helm",
+  "pants.backend.experimental.python",
+  "pants.backend.experimental.python.lint.ruff",
+  "pants.backend.python",
+  "pants.backend.python.lint.black",
+  "pants.backend.python.mixed_interpreter_constraints",
+  "pants.backend.python.typecheck.mypy",
+]
 
 [python]
 enable_resolves = true
@@ -34,7 +46,16 @@ report = ["xml", "html"]
 
 [pytest]
 install_from_resolve = "python-default"
-requirements = ["pytest==6.2.5", "pytest-asyncio==0.15.1", "pytest-cov==3.0.0", "pytest-regressions==2.0.1", "pytest-freezegun==0.4.2", "pytest-html==3.1.1", "pytest-subtests==0.5.0", "xdoctest==0.15.4"]
+requirements = [
+  "pytest==6.2.5",
+  "pytest-asyncio==0.15.1",
+  "pytest-cov==3.0.0",
+  "pytest-regressions==2.0.1",
+  "pytest-freezegun==0.4.2",
+  "pytest-html==3.1.1",
+  "pytest-subtests==0.5.0",
+  "xdoctest==0.15.4",
+]
 
 [ruff]
 config = "pyproject.toml"
@@ -47,5 +68,4 @@ diff = true
 
 [source]
 root_patterns = ["*/src", "*/tests", "3rdparty"]
-
 # PANTS_BASE_END
