--- a/span_tree/src/span_tree/BUILD
+++ b/span_tree/src/span_tree/BUILD
@@ -1,6 +1,5 @@
-python_sources()
-
-resource(
-    name="py_typed",
-    source="py.typed",
+py_package(
+    description="Use trees, traces, and spans and never read a log message again!",
+    explicit_dependencies=[":span_tree"],
+    resolve=""
 )
