--- a/3rdparty/requirements.txt
+++ b/3rdparty/requirements.txt
@@ -11,6 +11,7 @@ pytest-icdiff==0.5
 pytest-regressions==2.0.1
 pytest-subtests==0.5.0
 pytest==6.2.5
+requests==2.31.0
 rich==13.5.2
 ruff==0.0.285
 typing_extensions>=4.3.0
