fix: mypy and lint errors

--- a/span_tree/src/span_tree/BUILD
+++ b/span_tree/src/span_tree/BUILD
@@ -1,5 +1,5 @@
 py_package(
     description="Use trees, traces, and spans and never read a log message again!",
     explicit_dependencies=[":span_tree"],
-    resolve=""
+    resolve="",
 )
