--- a/span_tree/tests/test_span_tree/BUILD
+++ b/span_tree/tests/test_span_tree/BUILD
@@ -1,2 +1,2 @@
-python_test_utils(name="conftest")
-python_tests()
+python_test_utils(name="conftest", skip_mypy=True)
+python_tests(skip_mypy=True)
